option('cilktool',
       type : 'combo',
       choices : ['', 'none', 'cilkscale', 'cilksan'],
       value : '',
       description : 'OpenCilk instrumentation tool')

option('enable_benchmark',
       type : 'boolean',
       value : false,
       description : 'Enable benchmark target? (Will download the `coPapersDBLP` graph from the SuiteSparse Matrix Collection)')

option('replicate_bug_libasan',
       type : 'boolean',
       value : false,
       description : 'Disable `-shared-libasan` flag when linking shared library to replicate OpenCilk 1.0 RC 1 bug')
